force-app/main/default/objects/Parsed_Response_Holder__c/Parsed_Response_Holder__c.object-meta.xml
<CustomObject>
    <label>Parsed Response Holder</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Parsed Response Holder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parsed Response Holder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>