force-app/main/default/objects/Parsed_Response_Holder__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Parsed Response Holder</relationshipLabel>
    <relationshipName>Parsed_Response_Holder</relationshipName>
    <type>Lookup</type>
</CustomField>