force-app/main/default/objects/Parsed_Response_Holder__c/fields/Error_Details__c.field-meta.xml
<CustomField>
    <fullName>Error_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Details</label>
    <length>49999</length>
    <type>LongTextArea</type>
</CustomField>