force-app/main/default/objects/Parsed_Response_Holder__c/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insolvency</label>
    <referenceTo>Insolvency__c</referenceTo>
    <relationshipLabel>Parsed Response Holder</relationshipLabel>
    <relationshipName>Parsed_Response_Holder</relationshipName>
    <type>Lookup</type>
</CustomField>