force-app/main/default/objects/Parsed_Response_Holder__c/fields/Insolvency_from_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_from_Assignment__c</fullName>
    <description>Insolvency from Assignment</description>
    <formula>Assignment__r.Insolvency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insolvency from Assignment</inlineHelpText>
    <label>Insolvency from Assignment</label>
    <type>Text</type>
</CustomField>