force-app/main/default/objects/Parsed_Response_Holder__c/fields/Parsed_Response__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parsed Response</label>
    <length>99999</length>
    <type>LongTextArea</type>
</CustomField>