force-app/main/default/objects/Parsed_Response_Holder__c/fields/Related_Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Assignment_Status__c</fullName>
    <description>Related Assignment Status</description>
    <formula>Text(Assignment__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Related Assignment Status</inlineHelpText>
    <label>Related Assignment Status</label>
    <type>Text</type>
</CustomField>