force-app/main/default/objects/Parsed_Response_Holder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Assignment__c</columns>
    <columns>Related_Assignment_Status__c</columns>
    <columns>Insolvency__c</columns>
    <columns>Insolvency_from_Assignment__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>