force-app/main/default/objects/Parsed_Response_Holder__c/listViews/All_Error_No_Insolvency.listView-meta.xml
<ListView>
    <fullName>All_Error_No_Insolvency</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Assignment__c</columns>
    <columns>Related_Assignment_Status__c</columns>
    <columns>Insolvency__c</columns>
    <columns>Insolvency_from_Assignment__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <filters>
        <field>Insolvency_from_Assignment__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Related_Assignment_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All - Error - No Insolvency</label>
</ListView>